# markdown-editor

./: .gitignore  AI_ASSISTANT_PROMPT.md  Apagar.html  Apagar.md  BUILD_GUIDE.md  CATCH_ALL_ERRORS.md  CENTERED_LAYOUT_SCROLL_SYNC_ISSUE.md  CHANGELOG.md  CODE_CLEANUP_PLAN.md  CODE_REVIEW_REMEDIATION_PLAN.md  CODE_REVIEW_REPORT.md  CSS_ARCHITECTURE_DOCUMENTATION.md  CSS_EXAMPLES_AND_TUTORIALS.md  CSS_REFACTORING_PLAN_v2.md  CSS_REFACTORING_PLAN_v3.md  CURRENT_CHALLENGES.md  DEVELOPMENT_LOG.md  DRAG_DROP_TEST_STEPS.md  FUTURE_IMPROVEMENTS_PLAN.md  HORIZONTAL_SPLIT_PLUGIN_DOCUMENTATION.md  HORIZONTAL_SPLIT_PLUGIN_PLAN.md  IMPROVEMENTS.md  INSTALLATION_GUIDE.md  LESSONS_LEARNED.md  LICENSE  MULTI_TAB_PROJECT_PLAN.md  New Document.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_VALIDATION_REPORT.md  PHASED_ACTION_PLAN.md  PHASE_6_TESTING_STEPS.md  PHASE_8_TESTING_STEPS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_FINAL.md  (+21 more)
.github/workflows/: build.yml
Markdown Viewer/: Documentation.md  README.md  checkbox-test.md  package-lock.json  package.json  phase3-5-test.md  phase3-test.md  sample-phase3.md  test.html  test2.html
Markdown Viewer/scripts/: analyze-bundle.js
Markdown Viewer/src/: debug-ipc.js  index.html  ipc-wrapper.js  main-component.js  (+8 more)
Markdown Viewer/src-tauri/: Cargo.toml  entitlements.plist  markdown-editor.desktop  tauri.conf.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+64 files in other folders)
